--- a/gitbooks/css/timeline.css
+++ b/gitbooks/css/timeline.css
@@ -184,7 +184,7 @@ body, html {
 /******* Hux Branch *****/
 
 /* navbar - dark mode */
-.navbar-custom .nav li a{color:white;},
+.navbar-custom .nav li a{/*color:white;*/},
 .navbar-custom .nav li a:hover,
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-brand:hover {color:#777;}
